# InitialGL

./: .gitignore  CMakeLists.txt  LICENSE  README.MD
config/: config.h  config.h.in
src/cxx/main/: main.cpp
src/cxx/main/call_back/: CallBack.cpp  CallBack.h
src/cxx/main/camera/: Camera.cpp  Camera.h
src/cxx/main/light/: Light.cpp  Light.h  LightManager.cpp  LightManager.h
src/cxx/main/model/: Model.cpp  Model.h  ModelTexture.cpp  ModelTexture.h
src/cxx/main/predefinition/: Predefinitions.h
src/cxx/main/program/: Program.cpp  Program.h
src/cxx/main/shader/: FragmentShader.cpp  FragmentShader.h  Shader.h  VertexShader.cpp  VertexShader.h
src/cxx/main/uniformMapper/: UniformMapper.cpp  UniformMapper.h
src/cxx/main/util/: CLI_Color.h  Utilities.cpp  Utilities.h
src/glsl/: fragment.fsh  vertex.vsh
src/glsl/gPass/: gFragment.frag  gVertex.vert
src/glsl/lPass/: lFragment.frag  lVertex.vert
src/glsl/sPass/: sFragment.frag  sVertex.vert
uml/: README.md  class-diagram.puml  component-diagram.puml  dataflow-fbo.puml  sequence-rendering.puml  shader-uniforms.puml  state-camera.puml
